--- a/index.html
+++ b/index.html
@@ -13,4 +13,4 @@
     
 
 </body>
-</html>It may take a few minutes (The GitHub website says up to 10, but we’ve seen it take up to an hour. Do not add a “theme” to your project, or you may have git conflicts, instead, be patient.) but your project should be accessible over the web from your-github-username.github.io/your-github-repo-name (obviously substituting your own details in the link).
+</html>
